fix(clock-ui): fix alignment for cycle counter

--- a/src/modules/m6809/clock_ui/clock_ui.css
+++ b/src/modules/m6809/clock_ui/clock_ui.css
@@ -4,8 +4,6 @@
   justify-content: space-between;
   overflow-y: hidden;  
 
-  padding-bottom: 2%;
-
   button {
     margin: 0.25em;
     border: 0px;
@@ -47,6 +45,8 @@
     height: 1lh;
     width: 100%;
 
+    padding-bottom: 2%;
+
     .clock-marker {
       height: 1lh; 
       width: 1lh;
@@ -78,6 +78,8 @@
       display: inline-block;
       text-align: center;
       margin-right: 1em;
+
+      vertical-align: middle;
     }
   }
 }
